// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Advert 1`] = `
<div>
  <div
    style={
      Object {
        "height": 0,
        "overflow": "hidden",
        "width": 0,
      }
    }
  />
  <div>
    <div
      style={
        Object {
          "height": "90px",
          "width": "728px",
        }
      }
    >
      <div>
        <svg
          height={90}
          width={728}
        >
          <g
            fill="none"
            fillRule="evenodd"
            id="Page-1"
            opacity="0.07"
            stroke="none"
            strokeWidth="1"
          >
            <path
              fill="#1D1D1B"
              id="Shape"
            />
          </g>
        </svg>
      </div>
      <div>
        ADVERTISEMENT
      </div>
    </div>
  </div>
</div>
`;

exports[`2. Two adverts 1`] = `
Array [
  <div>
    <div
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
          "width": 0,
        }
      }
    />
    <div>
      <div
        style={
          Object {
            "height": "90px",
            "width": "728px",
          }
        }
      >
        <div>
          <svg
            height={90}
            width={728}
          >
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              opacity="0.07"
              stroke="none"
              strokeWidth="1"
            >
              <path
                fill="#1D1D1B"
                id="Shape"
              />
            </g>
          </svg>
        </div>
        <div>
          ADVERTISEMENT
        </div>
      </div>
    </div>
  </div>,
  <div>
    <div
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
          "width": 0,
        }
      }
    />
    <div>
      <div
        style={
          Object {
            "height": "90px",
            "width": "728px",
          }
        }
      >
        <div>
          <svg
            height={90}
            width={728}
          >
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              opacity="0.07"
              stroke="none"
              strokeWidth="1"
            >
              <path
                fill="#1D1D1B"
                id="Shape"
              />
            </g>
          </svg>
        </div>
        <div>
          ADVERTISEMENT
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`3. Advert loading state placeholder 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "height": "90px",
          "width": "728px",
        }
      }
    >
      <div>
        <svg
          height={90}
          width={728}
        >
          <g
            fill="none"
            fillRule="evenodd"
            id="Page-1"
            opacity="0.07"
            stroke="none"
            strokeWidth="1"
          >
            <path
              fill="#1D1D1B"
              id="Shape"
            />
          </g>
        </svg>
      </div>
      <div>
        ADVERTISEMENT
      </div>
    </div>
  </div>
</div>
`;
